Add some tests for Match